fix: 대시보드 출퇴근/최근 활동/카드 표시 로직 오류 수정