@@ -3,8 +3,10 @@ package kr.co.cloudStudy.auth.dto;
 
 import java.util.Collection;
 import java.util.Collections;
+import java.util.List;
 
 import org.springframework.security.core.GrantedAuthority;
+import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.core.userdetails.UserDetails;
 
 import kr.co.cloudStudy.department.entity.Department;
@@ -19,7 +21,7 @@ public class CustomUserDetails implements UserDetails {
 	
 	@Override
 	public Collection<? extends GrantedAuthority> getAuthorities() {
-		return Collections.emptyList();
+		return List.of(new SimpleGrantedAuthority("ROLE_USER"));
 	}
 	
 	@Override
